--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "apollo-server-express": "^3.13.0",
     "bull": "^4.13.0",
+    "graphql": "^16.8.2",
+    "graphql-tools": "^9.0.1",
     "redis": "^4.6.14",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
